Some more fixes
- Added docs example for truncations
- Duplicated the `aria-label` as the `title` on the clickable icon
- Keeping the `ref` and `title` attributes to the same element as `…rest` so they can be overridden
- Fix max width of badges with onClick and iconOnClick
- Fix text alignment
- Change cursor to default unless clickable

--- a/src/components/badge/_badge.scss
+++ b/src/components/badge/_badge.scss
@@ -14,9 +14,11 @@
   background-color: transparent;
   white-space: nowrap;
   vertical-align: middle;
-  text-align: center;
   overflow: hidden;
   max-width: calc(100% - #{($euiSizeS * 2) + 2px}); // Padding plus border
+  // The badge will only ever be as wide as it's content
+  // So, make the text left aligned to ensure all badges line up the same
+  text-align: left;
 
   &:focus-within {
     @include euiFocusRing('small');
@@ -35,6 +37,7 @@
 
   .euiBadge__childButton {
     @include euiTextTruncate;
+    max-width: calc(100% - #{$euiSizeM + $euiSizeXS}); // Subtract the icon and icon's margin
     flex: 0 0 auto;
     font-weight: inherit;
     line-height: inherit;
@@ -65,6 +68,7 @@
   .euiBadge__text {
     @include euiTextTruncate;
     flex: 1 1 auto;
+    cursor: default;
   }
 
   .euiBadge__icon {
@@ -91,6 +95,10 @@
 
   &:focus {
     @include euiFocusRing('small');
+  }
+
+  .euiBadge__text {
+    cursor: inherit;
   }
 }
 
